Fixing some alignment issues
Issues with speech mark bubble for reviews section and changing some margin in the personal training page.

--- a/assets/scss/components/_navigation.scss
+++ b/assets/scss/components/_navigation.scss
@@ -45,7 +45,7 @@
 .skip-top {
    position: absolute;
    display: block;
-   bottom: 1vw;
+   bottom: 3vh;
    left: 88vw;
    background-color: $color-green-main;
    opacity: 0.6;
@@ -66,9 +66,15 @@
     width: 1rem;
     height: 1rem;
 
+    @media screen and (min-width: 23.75em) {
+        width: 1.3rem;
+        height: 1.4rem;
+    }
+
     @media screen and (min-width: 28.12em) {
         width: 2rem;
         height: 2rem;
+        bottom: 1vh
     }
 }
 
