--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -1,6 +1,6 @@
 //-----About intro section----//
 .about {
-    margin-top: 10rem;
+    margin-top: 12rem;
     position: relative;
 
     @media screen and (min-width: 43em) {
