--- a/assets/scss/pages/_personal-training.scss
+++ b/assets/scss/pages/_personal-training.scss
@@ -1,13 +1,12 @@
 //-------Intro programs section------//
 .training {
-    margin-bottom: 5rem;
 
     &__container {
         margin-top: 2rem;
         position: relative;
 
         @media screen and (min-width: 37.5em) {
-            margin: 4rem auto;
+            margin: 10rem auto 0 auto;
             max-width: 1200px;
             @include flexAroundStart;
 
@@ -20,7 +19,10 @@
 
     &__intro {
         padding: 2rem;
-        @include flexColumnCenter;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
 
         p {
             font-size: 1.5rem;
@@ -50,11 +52,14 @@
 
     &__img {
         position: relative;
+        display: inline-block;
         @include flexColumnCenter;
+        margin-bottom: -2.1rem;
 
         &--figure {
-            display: inline-block;
-
+            position: relative;
+            
+           
             img {
                 display: block;
             }
