--- a/assets/scss/pages/_reviews.scss
+++ b/assets/scss/pages/_reviews.scss
@@ -182,7 +182,7 @@
                     top: -6%;
                 }
 
-                @media screen and (min-width: 75em) {
+                @media screen and (min-width: 40.31em) {
                     top: -4%;
                 }
             } 
@@ -212,7 +212,7 @@
                     top: -7%;
                 }
 
-                @media screen and (min-width: 75em) {
+                @media screen and (min-width: 40.31em) {
                     top: -5%;
                 }
             }
@@ -226,8 +226,8 @@
                     top: -10%;
                 }
 
-                @media screen and (min-width: 75em) {
-                    top: -8%;
+                @media screen and (min-width: 40.31em) {
+                    top: -6%;
                 }
             }
         }
